vortex-btrblocks/tests/snapshots/golden__regular__string_low_cardinality.snap
---
source: vortex-btrblocks/tests/golden.rs
expression: rendered
---
input: utf8, len=16384, nbytes=262144
root: vortex.dict(utf8, len=16384) nbytes=8373
  metadata: all_values_referenced: true
  codes: fastlanes.bitpacked(u8, len=16384) nbytes=8192
    metadata: offset: 0
    block_offsets: vortex.sequence(u64, len=17) nbytes=0
      metadata: base: 0u64, multiplier: 512i64
  values: vortex.fsst(utf8, len=12) nbytes=181
    metadata: len: 12, nsymbols: 9
    uncompressed_lengths: vortex.primitive(u8, len=12) nbytes=12
      metadata: ptype: u8
    codes_offsets: vortex.primitive(u8, len=13) nbytes=13
      metadata: ptype: u8
