vortex-btrblocks/tests/snapshots/golden__regular__struct_mixed.snap
---
source: vortex-btrblocks/tests/golden.rs
expression: rendered
---
input: {id=i64, category=utf8, value=f64}, len=16384, nbytes=524288
root: vortex.struct({id=i64, category=utf8, value=f64}, len=16384) nbytes=57525
  metadata: 
  id: vortex.sequence(i64, len=16384) nbytes=0
    metadata: base: 10000i64, multiplier: 7i64
  category: vortex.dict(utf8, len=16384) nbytes=8373
    metadata: all_values_referenced: true
    codes: fastlanes.bitpacked(u8, len=16384) nbytes=8192
      metadata: offset: 0
      block_offsets: vortex.sequence(u64, len=17) nbytes=0
        metadata: base: 0u64, multiplier: 512i64
    values: vortex.fsst(utf8, len=12) nbytes=181
      metadata: len: 12, nsymbols: 9
      uncompressed_lengths: vortex.primitive(u8, len=12) nbytes=12
        metadata: ptype: u8
      codes_offsets: vortex.primitive(u8, len=13) nbytes=13
        metadata: ptype: u8
  value: vortex.alp(f64, len=16384) nbytes=49152
    metadata: exponents: e: 14, f: 12
    encoded: fastlanes.bitpacked(i64, len=16384) nbytes=49152
      metadata: offset: 0
      block_offsets: vortex.sequence(u64, len=17) nbytes=0
        metadata: base: 0u64, multiplier: 3072i64
